VR: send scroll to the correct target

Scroll should be sent to the target that was under the pointer.
Also fixed the target point for scroll end.

BUG=808512,808492

Change-Id: Ia24322bc56782f23c90ab19899b636ca21a520ff
Reviewed-on: https://chromium-review.googlesource.com/919548
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Commit-Queue: Amirhossein Simjour <asimjour@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536812}
Former-commit-id: 8490926a774125c8edfed2b1992b22b00dec4212